# BOS-Components

./: package.json
contracts/IAH/: .gitignore  package.json
contracts/IAH/integration-tests/ts/: ava.config.cjs  package.json  pnpm-lock.yaml
contracts/IAH/integration-tests/ts/src/: main.ava.ts
contracts/IAH/nft-contract/: Cargo.toml  build.sh
contracts/IAH/nft-contract/src/: enumeration.rs  lib.rs  mint.rs
src/Bounties/: Apply.jsx  Create.jsx  Details.jsx  Explore.jsx
src/Bounties/Components/: Background.jsx  Card.jsx  CardHeader.jsx  CardProposals.jsx  DetailsHeader.jsx  FormApply.jsx  FormCreate.jsx  Header.jsx  Proposals.jsx  Sidebar.jsx
src/Common/: Button.jsx  TokenAmount.jsx
src/DAO/: Page.jsx  Proposal.jsx  Proposals.jsx  Reward.jsx  Rewards.jsx
src/DAO/Proposal/: Create.jsx  Vote.jsx
src/DAO/Reward/: Claim.jsx  Proposal.jsx
src/IAH/: Invite.jsx  Signup.jsx
src/IAH/Common/: HowToInvite.jsx  HowToVerify.jsx  InviteBox.jsx  InviteButton.jsx  LeaderBoard.jsx  ReferBox.jsx  ReferredList.jsx  WhatIs.jsx
src/IAH/Signup/: Complete.jsx  Guest.jsx  Invited.jsx
src/KingUI/: Button.jsx  ButtonIcon.jsx  InputDate.jsx  InputNumber.jsx  InputRadio.jsx  InputRadioToggle.jsx  Price.jsx  Text.jsx
